# jterm1

./: Cargo.toml
scripts/notebooks/: welcome.jtnb.md
scripts/shell-integration/: README.md  jterm1.bash  jterm1.fish  jterm1.ps1  jterm1.zsh
scripts/workflows/: docker-tail-logs.yaml  find-large-files.yaml  git-rebase-interactive.yaml  kill-port.yaml  ssh-tunnel.yaml
src/: agent.rs  ai.rs  config.rs  dialogs.rs  file_tree.rs  keybindings.rs  main.rs  notebook.rs  palette.rs  parser.rs  process.rs  pty.rs  session.rs  vte_pty.rs  workflows.rs
src/block_view/: mod.rs
src/terminal/: alt.rs  ansi.rs  block.rs  grid.rs  kitty_graphics.rs  mod.rs  select.rs  url.rs  vte.rs
