[package]
name = "jterm1"
version = "0.1.0"
edition = "2021"

[dependencies]
relm4 = { version = "0.11", features = ["libadwaita"] }
gtk4 = { version = "0.11.4", features = ["v4_14"] }
gdk4 = { version = "0.11.4", features = ["v4_14"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
vte4 = { version = "0.10.0", features = ["v0_76"] }
log = { version = "0.4", features = ["std"] }
lru = "0.18"
memchr = "2"
nix = { version = "0.31.3", features = ["term", "signal", "process", "ioctl"] }
pcre2-sys = "0.2.10"
toml = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = { version = "0.6", default-features = false }
zstd = "0.13"
regex = "1"
fuzzy-matcher = "0.3"
unicode-width = "0.2"
unicode-bidi = "0.3"
unicode-bidi-mirroring = "0.4"
io-lifetimes = "2"
ureq = { version = "2", default-features = false, features = ["tls"] }
serde_yaml = "0.9"

[dev-dependencies]
env_logger = "0.11"

[profile.dev]
opt-level = 1

# [profile.release]
# lto = true
# codegen-units = 1
# strip = true
# panic = "abort"
